--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -7,7 +7,7 @@
 {% load thumbnail %}
 
 {% load cache %}
-{% cache 20 index_page %}
+{% cache 20 index %}
 {% block content %}
     <h1>Последние обновления на сайте</h1>
     <article>
