--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,36 +1,31 @@
-{% extends 'base.html' %} 
-
-{% block title %}
-  Это главная страница проекта Yatube
-{% endblock title%}
-
-{% load thumbnail %}
-
+{% extends 'base.html' %}
+{% block title %}Вы в Yatube !{% endblock %}
+{% block header %} Добро пожаловать в Yatube ! {% endblock %}
 {% load cache %}
-{% cache 20 index %}
-{% block content %}
-    <h1>Последние обновления на сайте</h1>
-    <article>
+{% cache 20 index_page %}
+  {% block content %}
+  {% include "posts/includes/switcher.html" with index=True %}
+  {% load thumbnail %}
     {% for post in page_obj %}
       <ul>
         <li>
-          Автор: {{ post.author.get_full_name }}
+          Автор: 
+          <a href="{% url 'posts:profile' post.author.username %}"> {{ post.author.username}}</a>
         </li>
         <li>
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
         </li>
-      </ul>      
+      </ul>
       {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-      <img class="card-img my-2" src="{{ im.url }}">
+        <img class="card-img my-2" src="{{ im.url }}">
       {% endthumbnail %}
-      {{ post.text }}
-      
+      {{ post.text|linebreaks }}
       {% if post.group.slug %}
-        <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
-      {% endif%}
+      Все записи группы:
+        <a href="{% url 'posts:group_posts' post.group.slug %}"> {{post.group.title}} </a> 
+      {% endif %}
       {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %} 
-    </article>
-  {% include 'posts/includes/paginator.html' %}
-{% endblock %}  
+    {% endfor %}
+    {% include 'posts/includes/paginator.html' %}
+  {% endblock %}
 {% endcache %} 
