--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -35,7 +35,7 @@
         <p class="test">           
           {{ post.text|linebreaks }}
         </p>
-        {% include 'posts/comments.html' %}
+        {% include 'posts/includes/comments.html' %}
       </article>
     </div>
   </main>
