--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -8,6 +8,7 @@
         
       {% endblock %}
     </title>
+    <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
   </head>
   <body>       
     <header>
