--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,53 +1,97 @@
-<header>
+
+<header class="pb-3">
+ 
+
   {%load static%}
-  <nav class="navbar navbar-light" style="background-color: lightskyblue">
-    <div class="container">
-      <a class="navbar-brand" href="{% url 'posts:index' %}">
-        <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-        <span style="color:red">Ya</span>tube
-      </a>
-      <ul class="nav nav-pills">
-        {% with request.resolver_match.view_name as view_name %}  
-        <li class="nav-item">              
-          <a class="nav-link {% if view_name  == 'about:author' %}active{% endif %}" 
-            href="{% url 'about:author' %}">
-            Об авторе
-          </a>
-        </li>
-        {% endwith %} 
-        {% with request.resolver_match.view_name as view_name %}  
-        <li class="nav-item">
-          <a class="nav-link {% if view_name  == 'about:tech' %}active{% endif %}" 
-            href="{% url 'about:tech' %}"
-          >Технологии</a>
-        </li>
-        {% endwith %}
+  <link rel = "stylesheet" href = "{% static 'header/css/header.css' %}"  >
+  <nav class="navbar navbar-expand-md navbar-light bg-white border-bottom">
+    <div class="container-fluid px-md-4">  <!--Основнй контейнер, сss и тд.-->
+
+
+
+
+
+      <div class="logo_type">  <!--Это логотип сайта-->
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li>
+            <a class="navbar-brand" href="{% url 'posts:index' %}">
+              <img src="{% static 'img/logo3.png' %}"  height="60" class="d-inline-block align-top" alt="">
+            </a>
+          </li> 
+        </ul> 
+      </div>
+
+
+      <div class='right_part'> <!-- правя часть -->
+
+      
+        <div class="collapse navbar-collapse account" id="navbarSupportedContent2">  <!-- аккаунт -->
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item ">
+              <div class="small text-muted">
+       
+                {% if user.is_authenticated %} <!-- Если пользователь авторизован... -->
+                  <div class='account_detail'>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" fill="currentColor" class="bi bi-person person" viewBox="0 0 16 16">
+                      <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                    </svg> <!--Иконка человечка -->
+
+                    <span class="nav-link " >  {{ user.username }}  </span>  <!-- Имя пользователя в навигации наверху -->
+                  </div>
+                {% endif %}
+              </div>
+            </li>
+          </ul>   
+        </div>  <!-- аккаунт -->
+ 
+                
+
+
         {% if user.is_authenticated %}
-        {% with request.resolver_match.view_name as view_name %}  
-        <li class="nav-item">
-          <a class="nav-link {% if view_name  == 'posts:post_create' %}active{% endif %}" 
-            href="{% url 'posts:post_create' %}"
-          >Новая запись</a>
-        </li>
-        {% endwith %}
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="{% url 'users:password_change_form' %}">Изменить пароль</a>
-        </li>
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="{% url 'users:logout' %}">Выйти</a>
-        </li>
-        <li class="nav-link link-dark">
-          Вы: {{ user.username }}
-        <li>
-        {% else %}
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="{% url 'users:login' %}">Войти</a>
-        </li>
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="{% url 'users:signup' %}">Регистрация</a>
-        </li>
+        <div class="new_post"> <!-- новая запись -->
+          <a type="button" role="button" href="{% url 'posts:post_create' %}"
+            class="btn btn-outline-secondary border-0 new-post-btn">
+            <div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+                <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
+              </svg>
+            </div>
+            <span class="fs15 fw500">Новая запись</span>
+          </a>  <!--Кнопка добавления новой записи, Не трогать-->
+        </div> <!-- новая запись -->
         {% endif %}
-      </ul>
-    </div>
-  </nav>      
-</header> 
+        <div class='exit'>
+          {% if user.is_authenticated %}
+          <a class="exit2" href="{% url 'users:logout' %}">
+            
+            <button type="button" class="btn btn-outline-secondary">
+              Выйти
+            </button>
+            {% else %}
+            <div class='into'>
+            <a href="{% url 'users:login' %}">
+              <button type="button" class="btn btn-outline-secondary">
+                Войти
+              </button>
+            </a>
+          </div>
+            <a class="nav-link link" href="{% url 'users:signup' %}">
+
+              <button type="button" class="btn btn-outline-secondary">Регистрация</button>
+            </a>
+            {% endif %}
+          </a>
+        </div>
+
+
+
+      </div> <!-- правая часть -->
+
+
+
+    </div> <!--Основнй контейнер, сss и тд.-->
+  </nav>
+</header>
+
+
+
