--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,31 +1,74 @@
-{% extends 'base.html' %}
-{% block title %}Вы в Yatube !{% endblock %}
-{% block header %} Добро пожаловать в Yatube ! {% endblock %}
-{% load cache %}
-{% cache 20 index_page %}
-  {% block content %}
-  {% include "posts/includes/switcher.html" with index=True %}
-  {% load thumbnail %}
-    {% for post in page_obj %}
-      <ul>
-        <li>
-          Автор: 
-          <a href="{% url 'posts:profile' post.author.username %}"> {{ post.author.username}}</a>
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img my-2" src="{{ im.url }}">
-      {% endthumbnail %}
-      {{ post.text|linebreaks }}
-      {% if post.group.slug %}
-      Все записи группы:
-        <a href="{% url 'posts:group_posts' post.group.slug %}"> {{post.group.title}} </a> 
-      {% endif %}
-      {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %}
-    {% include 'posts/includes/paginator.html' %}
+{% extends "base.html" %}
+{% block title %}Главная страница{% endblock %}
+{% load static %}
+{% block content %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+{% load thumbnail %}
+<div class="container">
+
+<style>
+  li {list-style-type: none;}
+  ul {margin-left: 0; padding-left: 0;}
+  .card {margin-right: 15px; padding: 0px;}
+  .card-title, .card-text, .btn-outline-primary, .card { margin-left: 14px; margin-right: 14px;  margin-bottom: 14px;}
+
+  .post_image2 {
+    position: relative;
+    overflow: hidden;
+    width: 239px;
+    height: 200px;
+ }
+
+ .post_image2 img{
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   width: 239px;
+   height: 200px;
+   object-fit: cover;
+ }
+ 
+
+</style>
+
+  <div class="container">
+    <div class="row">
+      <div class="album py-5">
+        <div class="pb-3">
+          <h1 class="h3">Последние записи</h1>
+        </div>
+
+
+    <div class="row">
+      
+        {% for post in page_obj %}
+        <div class="card" style="width: 15rem;">
+          <div class='post_image2'>
+            {% thumbnail post.image "1080" crop="center" upscale=True as im %}
+              <img class="img" src="{{ im.url }}" alt="изображение поста">
+            {% endthumbnail %}
+          </div>
+          <div class="card-body px-0">
+            <h5 class="card-title">{{ post.title|slice:":30" }}</h5>
+
+            <a href="{% url 'posts:post_detail' post.id %}"> 
+
+
+              <button type="button" class="btn btn-outline-primary"> Подробнее </button>
+            </a>
+          </div>
+        </div>
+        {% endfor %}
+      
+    </div>
+
+
+
+
+        
+      </div>
+    </div>
+  </div>
+
   {% endblock %}
-{% endcache %} 
